tidying & add Newtonsoft.Json

--- a/PokemonAnalyzer/PokemonAnalyzer/PokemonAnalyzer.csproj
+++ b/PokemonAnalyzer/PokemonAnalyzer/PokemonAnalyzer.csproj
@@ -9,4 +9,9 @@
         <AssemblyName>PokemonAnalyzer</AssemblyName>
     </PropertyGroup>
 
+
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    </ItemGroup>
+
 </Project>
