--- a/PokemonAnalyzer/PokemonAnalyzer/PokemonAnalyzer.csproj
+++ b/PokemonAnalyzer/PokemonAnalyzer/PokemonAnalyzer.csproj
@@ -4,13 +4,14 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
-        <RuntimeIdentifier>win7-x64</RuntimeIdentifier>
         <LangVersion>latest</LangVersion>
         <AssemblyName>PokemonAnalyzer</AssemblyName>
+        <GenerateProgramFile>false</GenerateProgramFile>
     </PropertyGroup>
 
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="NUnit" Version="3.13.3" />
     </ItemGroup>
